--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat+Alternates:wght@400;500&family=Righteous&display=swap');
+
+:root {
+  --fm-Audiowide: 'Audiowide', cursive;
+  --fm-Righteous: 'Righteous', cursive;
+  --fm-Montserrat: 'Montserrat Alternates', sans-serif;
+
+  --color-Orange: #FD8A01;
+  --color-OffWhite: #E0DBD9;
+  --color-Salmon: #F54C23;
+  --color-Yellow: #FECF18;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--fm-Montserrat);
 }
